<resources>
    <string name="app_name">Hospital</string>

    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="confirmPassword">Confirm your password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone number</string>
    <string name="age">Age</string>
    <string name="certificates">Certificates</string>
    <string name="main">Main</string>
    <string name="role">Role</string>
    <string name="noUsers">There is no</string>
    <string name="Patients">Patients</string>
    <string name="Users">Users</string>
    <string name="your_private_key">It is your private key, please don\'t forget it! Better write it somewhere.</string>
    <string-array name="existingRoles">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>
    <string-array name="typesOfPatients">
        <item>All</item>
        <item>My</item>
    </string-array>
    <string name="operation_complete">"Operation complete"</string>
    <string name="error">Error</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_password">Passwords don\'t match</string>
    <string name="error_name_exist">This name already exist</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">All fields are required</string>
    <string name="error_login_password_required">Please input login and password</string>
    <string name="server_error">Error on server</string>
    <string name="no_connection">No connection</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="showDiseaseSignature">Signature</string>
    <string name="this_is_your_private_key">This is your private key</string>
    <string name="incorrect_date_format">An incorrect date format</string>
    <string name="wrong_key_or_password">Wrong key or password</string>
    <string name="doctors_certificate">Doctors certificate</string>
    <string name="attention">Attention</string>
    <string name="please_enter_your_private_key">Please, enter your private key</string>
    <string name="this_is_signature_of_the_last_modified">This is signature of the last modified</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signature">Signature</string>
    <string name="last_modified_by">Last modified by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="are_you_sure_that_you_want_to_delete_user">Are you sure that you want to delete user</string>
    <string name="are_you_sure_that_you_want_to_delete_certificate_of">Are you sure that you want to delete certificate of</string>
    <string name="action_settings">Settings</string>
    <string name="disease">Disease</string>
    <string name="open_date">Open Date</string>
    <string name="close_date">Close Date</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="add_patient_to_doctor">Add patient to doctor</string>
    <string name="patients">Patients</string>
    <string name="add_new_user">ADD NEW USER</string>
    <string name="enter_captcha">Please enter captcha</string>
    <string name="good_captcha">Good captcha</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="private_key">Private key</string>
    <string name="password">Password</string>
    <string name="please_refresh_page">Please, refresh page, this user have a doctor</string>
</resources>
