<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mary.hospital.Action.Registration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/registrationLoginEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/registrationNameEditText"
        android:layout_below="@+id/registrationLoginEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/registrationPhoneEditText"
        android:layout_below="@+id/registrationNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/registrationRoleSpinner"
        android:layout_alignRight="@+id/registrationNameEditText"
        android:layout_alignEnd="@+id/registrationNameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/registrationAgeEditText"
        android:layout_below="@+id/registrationPhoneEditText"
        android:hint="@string/age" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/registrationRoleSpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/existingRoles"
        android:scrollIndicators="right"
        android:clickable="true"
        android:touchscreenBlocksFocus="false"
        android:layout_alignBottom="@+id/registrationAgeEditText"
        android:layout_toRightOf="@+id/registrationCancelButton"
        android:layout_below="@+id/registrationPhoneEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/registrationRegistrationButton"
        android:onClick="saveNewUser"
        android:layout_below="@+id/registrationConfirmPasswordEditText"
        android:layout_alignRight="@+id/registrationNameEditText"
        android:layout_alignEnd="@+id/registrationNameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registrationPasswordEditText"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/registrationRoleSpinner"
        android:layout_alignRight="@+id/registrationRoleSpinner"
        android:layout_alignEnd="@+id/registrationRoleSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registrationConfirmPasswordEditText"
        android:hint="@string/confirmPassword"
        android:layout_below="@+id/registrationPasswordEditText"
        android:layout_alignLeft="@+id/registrationPasswordEditText"
        android:layout_alignStart="@+id/registrationPasswordEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/registrationCancelButton"
        android:onClick="returnBack"
        android:layout_below="@+id/registrationConfirmPasswordEditText"
        android:layout_toLeftOf="@+id/registrationRegistrationButton" />

</RelativeLayout>
